--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-config-browser-plugin</artifactId>
+            <version>2.3.16.1</version>
+        </dependency>
     </dependencies>
 </project>
